@@ -46,7 +46,7 @@ if( NOT DEFINED LIB_ACES_CLIP_ONLY )
 
 endif(NOT DEFINED LIB_ACES_CLIP_ONLY )
 
-install( TARGETS ${ACESexecutables} ACESclip 
+install( TARGETS ACESclip 
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib 
